# Raxel

./: .gitignore  Cargo.toml  LICENSE
raxel/: Cargo.toml
raxel-demo/: Cargo.toml  about_the_textures.txt  build.rs
raxel-demo/src/: main.rs
raxel-demo/src/resources/shader/: cell.wgsl  command_gen.wgsl
raxel/src/: lib.rs
raxel/src/render/: bindable.rs  block_buffer.rs  camera.rs  mod.rs  renderer.rs
raxel/src/resource/: mod.rs  resource.rs  texture_system.rs
raxel/src/voxel/: mod.rs  voxel.rs  voxelface.rs  voxelmodel.rs
raxel/src/world/: cell.rs  world.rs
